--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,9 +14,18 @@
             "type": "node"
         },
         {
+            "name": "Run: File",
             "type": "node",
             "request": "launch",
-            "name": "Electron Main",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "program": "${file}"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Run: Electron Main",
             "runtimeExecutable": "${workspaceFolder}/node_modules/@electron-forge/cli/script/vscode.sh",
             "windows": {
                 "runtimeExecutable": "${workspaceFolder}/node_modules/@electron-forge/cli/script/vscode.cmd"
