--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "electron-store": "^10.0.1",
     "vue": "3.5.12",
     "vue-router": "^4.5.0",
+    "vue-i18n": "^11.1.2",
     "vuex": "^4.0.2"
   }
 }
