--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "electron": "^35.0",
     "electron-devtools-installer": "^4.0.0",
     "sass-embedded": "^1.85.1",
-    "vite": "^5.4.14"
+    "vite": "^5.4.14",
+    "vite-plugin-vue-devtools": "^7.7.2"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
