Add development scripts and optimize routing paths

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "description": "your application description",
   "main": ".vite/build/main.js",
   "scripts": {
+    "dev": "vite dev --config vite.renderer.config.mjs",
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
