Updates the Electron version and  dependencies

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@electron/asar": "^3.3.1",
     "@electron/fuses": "^1.8.0",
     "@vitejs/plugin-vue": "^5.2.1",
-    "electron": "^35.0",
+    "electron": "34.5.1",
     "electron-devtools-installer": "^4.0.0",
     "sass-embedded": "^1.85.1",
     "vite": "^5.4.14",
@@ -41,9 +41,12 @@
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
+    "@element-plus/icons-vue": "^2.3.1",
     "@vscode/codicons": "^0.0.36",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^10.0.1",
+    "element-plus": "^2.9.7",
+    "lodash-es": "^4.17.21",
     "semver": "^7.7.1",
     "vue": "3.5.12",
     "vue-i18n": "^11.1.2",
