--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "engines": {
     "node": "18 || 20"
   },
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0-alpha.1",
+  "copyright": "Copyright (c) 2025 your-name",
   "description": "your application description",
   "main": ".vite/build/main.js",
   "scripts": {
