--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@electron-toolkit/preload": "^3.0.1",
     "@element-plus/icons-vue": "^2.3.1",
     "@vscode/codicons": "^0.0.36",
+    "electron-log": "^5.3.4",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^10.0.1",
     "element-plus": "^2.9.7",
