--- a/package.json
+++ b/package.json
@@ -41,15 +41,19 @@
     "electron-devtools-installer": "^4.0.0",
     "rcedit": "^4.0.1",
     "sass-embedded": "^1.85.1",
+    "unplugin-auto-import": "^19.2.0",
+    "unplugin-vue-components": "^28.5.0",
     "vite": "^5.4.14",
     "vite-plugin-vue-devtools": "^7.7.2"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
+    "@element-plus/icons-vue": "^2.3.1",
     "@vscode/codicons": "^0.0.36",
     "electron-log": "^5.3.4",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^10.0.1",
+    "element-plus": "^2.9.7",
     "lodash-es": "^4.17.21",
     "semver": "^7.7.1",
     "vue": "3.5.12",
