--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "your-app-name",
   "productName": "YourProductName",
   "engines": {
-    "node": "18 || 20"
+    "node": "20"
   },
   "version": "1.0.0-alpha.1",
   "copyright": "Copyright (c) 2025 your-name",
