--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@electron-forge/plugin-vite": "^7.7.0",
     "@electron/asar": "^3.3.1",
     "@electron/fuses": "^1.8.0",
+    "@pengx17/electron-forge-maker-appimage": "^1.2.1",
     "@vitejs/plugin-vue": "^5.2.1",
     "electron": "34.5.1",
     "electron-devtools-installer": "^4.0.0",
