--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "engines": {
     "node": "20"
   },
-  "version": "1.0.0-alpha.3",
+  "version": "1.0.0-beta.1",
   "copyright": "Copyright (c) 2025 your-name",
   "description": "your application description",
   "main": ".vite/build/main.js",
